--- a/.github/workflows/Build_Test.yml
+++ b/.github/workflows/Build_Test.yml
@@ -52,3 +52,14 @@ jobs:
 
     - name: Run unit tests
       run: npm run test:ui
+      
+  deploy:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    needs: build-ui-tests
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+            service-id: ${{ secrets.SERVICE_ID }}
+            api-key: ${{ secrets.RENDER_TOKEN }}
